[package]
name = "froggr-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1"
froggr = { path = ".." }
serde_json = "1.0"

[[bin]]
name = "session_fuzz"
path = "fuzz_targets/session_fuzz.rs"
test = false
doc = false

[[bin]]
name = "command_fuzz"
path = "fuzz_targets/command_fuzz.rs"
test = false
doc = false 